fix: expression field blowout on small screens

--- a/webui/src/scss/_common.scss
+++ b/webui/src/scss/_common.scss
@@ -322,6 +322,7 @@ svg.pad-left {
 
 	.expression-field {
 		flex-grow: 1;
+		min-width: 0;
 
 		align-self: center;
 	}
